# holidays-gem

./: Cargo.toml
holidays-gem/: Cargo.toml  build.rs
holidays-gem-definitions/: Cargo.toml
holidays-gem-definitions/src/: lib.rs
holidays-gem/src/: lib.rs
holidays-gem/tests/: definition_tests.rs  definitions_deserialization.rs
src/: lib.rs
